# quick-commit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
