[package]
name = "quick-commit"
description = "Commit all changes in 4 key presses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2="0.13.22"
colored="2.0"


[[bin]]
name="qc"
path="src/main.rs"
